--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,8 @@
   <artifactId>manifest-payload-linker</artifactId>
   <version>1.0-SNAPSHOT</version>
 
+  <name>Manifest Payload Linker</name>
+  <description>A tool that links Jira tickets with given Wildfly Channel manifest.</description>
   <url>https://github.com/jboss-set/manifest-payload-linker</url>
   <developers>
     <developer>
@@ -55,6 +57,22 @@
           <tagNameFormat>@{project.version}</tagNameFormat>
           <arguments>-DskipTests</arguments>
         </configuration>
+      </plugin>
+
+      <!-- Produce the source JAR -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-source-plugin</artifactId>
+        <version>3.3.0</version>
+        <executions>
+          <execution>
+            <id>attach-sources</id>
+            <phase>package</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
 
       <!-- Standalone JAR -->
