--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.jboss.set.payload</groupId>
   <artifactId>manifest-payload-linker</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <name>Manifest Payload Linker</name>
   <description>A tool that links Jira tickets with given Wildfly Channel manifest.</description>
@@ -28,7 +26,7 @@
     <connection>scm:git:git://github.com/jboss-set/manifest-payload-linker.git</connection>
     <developerConnection>scm:git:git@github.com:jboss-set/manifest-payload-linker.git</developerConnection>
     <url>https://github.com/jboss-set/manifest-payload-linker</url>
-    <tag>HEAD</tag>
+    <tag>1.0.0</tag>
   </scm>
 
   <distributionManagement>
