--- a/config/application.properties.template
+++ b/config/application.properties.template
@@ -3,7 +3,7 @@ jira.url=https://jira-domain/
 # Auth token for connecting to Jira
 jira.token=
 # Jira JQL query to load component upgrade tickets
-jira.query=project = JBEAP AND issuetype = "Component Upgrade" AND ("Target Release" = 8.1.0.GA or fixVersion = 8.1.0.Beta) AND status in (Resolved, "Ready for QA") ORDER BY created ASC
+jira.query=project = JBEAP AND issuetype = "Component Upgrade" AND ("Target Release" = 8.1.0.GA or fixVersion = 8.1.0.Beta) AND status in (Resolved, "Ready for QA", Verified) ORDER BY created ASC
 
 # PNC Builds API URL
 pnc.builds_api_url=https://pnc-domain/pnc-rest/v2/builds
