--- a/config/application.properties.template
+++ b/config/application.properties.template
@@ -4,6 +4,8 @@ jira.url=https://jira-domain/
 jira.token=
 # Jira JQL query to load component upgrade tickets
 jira.query=project = JBEAP AND issuetype = "Component Upgrade" AND ("Target Release" = 8.1.0.GA or fixVersion = 8.1.0.Beta) AND status in (Resolved, "Ready for QA", Verified) ORDER BY created ASC
+# Jira rate limit - time span between requests in milliseconds
+#jira.request_frequency=500
 
 # PNC Builds API URL
 pnc.builds_api_url=https://pnc-domain/pnc-rest/v2/builds
@@ -12,3 +14,6 @@ pnc.builds_api_url=https://pnc-domain/pnc-rest/v2/builds
 llm.base_url=http://localhost:35271/v1
 # Query timeout for the LLM
 llm.timeout=60
+
+# Disable StaticDependencyGroupsResolutionStrategy
+#static_resolution_strategy.disable=true
